add project section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,9 @@
   --link-theme: #d3e97a;
   --input-theme: #a9a9a9;
   --text-theme: #c7c7c7;
-  --fs-xs: 12px;
-  --fs-sm: 18px;
+  --heading-theme: #fff;
+  --fs-xs: 14px;
+  --fs-sm: 16px;
   --fs-md: 24px;
   --fs-lg: 30px;
   --fs-xl: 36px;
