--- a/src/componets/baner/baner.css
+++ b/src/componets/baner/baner.css
@@ -1,32 +1,36 @@
-.container-fluid {
+.baner_main {
   padding: 50px;
   background-color: var(--main-theme);
   color: var(--text-theme);
-  min-height: 80vh;
+  min-height: 600px;
+  height: auto;
+
   border-bottom: 1px solid var(--light-theme);
 }
-.container .row {
+
+.baner_inner .row {
   display: flex;
   align-items: center;
 }
-.container .heading {
+.baner_inner .heading {
   font-size: 50px;
   font-family: "Bebas Neue", sans-serif;
   font-weight: 500;
   font-style: normal;
+  color: var(--heading-theme);
 }
 
-.container p {
+.baner_inner p {
   font-size: var(--fs-xs);
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
 }
-.container .links {
+.baner_inner .links {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.container .links .icons {
+.baner_inner .links .icons {
   padding: 5px;
   width: 30px;
   height: 30px;
@@ -39,17 +43,17 @@
   cursor: pointer;
 }
 
-.container .img_sec {
+.baner_inner .img_sec {
   max-width: 350px;
   max-height: 480px;
   border-radius: 20px;
   margin-top: 20px;
 }
-.container .img_sec .img {
+.baner_inner .img_sec .img {
   border-radius: 10px;
 }
 
-.container .sec_col {
+.baner_inner .sec_col {
   display: flex;
   justify-content: center;
 }
