--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,11 +20,12 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   z-index: 0;
   font-family: "Inter Tight", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  background-color: red;
 }
