--- a/src/componets/drawer/drawer.css
+++ b/src/componets/drawer/drawer.css
@@ -1,13 +1,13 @@
 .drawer_main {
   background-color: var(--main-theme);
   opacity: 0.8;
-  width: 100vw; /* Set width to 100% of the viewport width */
-  height: 100vh; /* Set height to 100% of the viewport height */
+  width: 100%; /* Set width to 100% of the viewport width */
+  height: 1920; /* Set height to 100% of the viewport height */
   padding: 0;
   margin: 0;
   position: absolute;
   top: 1;
-  z-index: 1;
+  z-index: 1000;
 }
 .drawer_main .links {
   height: 100vh;
