--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,12 @@
   --dark-theme: #555555;
   --light-theme: #c0c0c0;
   --link-theme: #d3e97a;
-  --input-theme: #a9a9a9;
+  --input-theme: #484848;
   --text-theme: #c7c7c7;
   --heading-theme: #fff;
   --fs-xs: 14px;
   --fs-sm: 16px;
-  --fs-md: 24px;
+  --fs-md: 22px;
   --fs-lg: 30px;
   --fs-xl: 36px;
 }
