--- a/src/componets/contect_sec/contact_sec.css
+++ b/src/componets/contect_sec/contact_sec.css
@@ -1,37 +1,30 @@
-.about_sec_main {
-  padding: 50px;
+.contact_sec_main {
+  padding: 100px 10px;
   background-color: var(--main-theme);
   min-height: auto;
   border-bottom: 1px solid var(--light-theme);
 }
 
-.about_sec_main .heading {
-  width: 200px;
+.contact_sec_inner .heading {
   font-size: 50px;
   font-family: "Bebas Neue", sans-serif;
   font-weight: 500;
   font-style: normal;
   color: var(--heading-theme);
 }
-.about_sec_main .about_detail .head {
-  font-size: var(--fs-sm);
-  font-weight: 600;
-  font-family: "Inter Tight", sans-serif;
-  font-style: normal;
-  color: var(--heading-theme);
-}
-.about_sec_main .about_detail p {
+.contact_sec_inner p {
   font-size: var(--fs-xs);
   font-weight: 400;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
   color: var(--text-theme);
 }
-.more_link {
+
+.contact_sec_inner .info_links {
   display: flex;
+  flex-direction: row;
+  padding-top: 5px;
   gap: 20px;
-  align-items: center;
   color: var(--link-theme);
-  padding-top: 30px;
-  cursor: pointer;
+  font-size: var(--fs-lg);
 }
