--- a/src/componets/drawer/drawer.css
+++ b/src/componets/drawer/drawer.css
@@ -1,16 +1,19 @@
 .drawer_main {
   background-color: var(--main-theme);
-  opacity: 0.8;
-  width: 100%; /* Set width to 100% of the viewport width */
-  height: 1920; /* Set height to 100% of the viewport height */
+  opacity: 0.9;
+  width: 100%;
+  height: 100vh;
   padding: 0;
   margin: 0;
-  position: absolute;
-  top: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 1000;
+  backdrop-filter: blur(5px); /* Add blur effect */
+  overflow-y: auto; /* Allow scrolling within the drawer */
 }
+
 .drawer_main .links {
-  height: 100vh;
   padding: 50px;
   display: flex;
   justify-content: center;
@@ -18,4 +21,25 @@
   flex-direction: column;
   font-size: var(--fs-xl);
   gap: 30px;
+}
+.drawer_main .links span {
+  cursor: pointer;
+}
+.drawer_main .links .close {
+  position: absolute;
+  top: 3%;
+  right: 6%;
+}
+
+.blur-background {
+  position: fixed;
+  top: 10%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px); /* Add blur effect */
+}
+
+.no-scroll {
+  overflow: hidden; /* Disable scrolling */
 }
