--- a/src/componets/baner/baner.css
+++ b/src/componets/baner/baner.css
@@ -1,5 +1,5 @@
 .baner_main {
-  padding: 50px;
+  padding: 100px 50px;
   background-color: var(--main-theme);
   color: var(--text-theme);
   min-height: 600px;
@@ -46,22 +46,27 @@
 }
 
 .baner_inner .img_sec {
-  max-width: 350px;
-  max-height: 480px;
+  width: 350px;
+  height: 480px;
   border-radius: 20px;
   margin-top: 20px;
 }
 .baner_inner .img_sec .img {
   border-radius: 10px;
   opacity: 0.8 !important;
+  background-color: var(--light-theme);
 }
 
 .baner_inner .sec_col {
   display: flex;
   justify-content: center;
 }
-@media only screen and (max-width: 767px) {
-  .baner_inner .img_sec .img {
-    opacity: 0.2 !important;
+
+@media only screen and (max-width: 370px) {
+  .baner_inner .img_sec {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    margin-top: 20px;
   }
 }
