--- a/src/componets/drawer/drawer.css
+++ b/src/componets/drawer/drawer.css
@@ -22,13 +22,23 @@
   font-size: var(--fs-xl);
   gap: 30px;
 }
+
 .drawer_main .links span {
   cursor: pointer;
 }
+
+.drawer_main .links span:hover {
+  color: var(--link-theme);
+  cursor: pointer;
+}
+.drawer_main .links a {
+  color: var(--text-theme);
+  text-decoration: none;
+}
 .drawer_main .links .close {
   position: absolute;
-  top: 3%;
-  right: 6%;
+  top: 2%;
+  right: 2%;
 }
 
 .blur-background {
