--- a/src/componets/faq/faq.css
+++ b/src/componets/faq/faq.css
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: var(--dark-theme);
+  background-color: var(--light-theme);
   border: none;
   cursor: pointer;
   outline: none;
@@ -32,7 +32,7 @@
   font-weight: 400;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
-  color: var(--text-theme);
+  color: var(--input-theme);
   transition: background-color 0.3s ease;
 }
 
