--- a/src/componets/projects/project.css
+++ b/src/componets/projects/project.css
@@ -124,9 +124,11 @@
   color: var(--link-theme);
   padding-top: 30px;
 }
-.project_detail .form .info_links span {
-  border-bottom: 1px solid var(--link-theme);
+.project_detail .form .info_links a {
   cursor: pointer;
+  text-decoration: none;
+  color: var(--link-theme);
+  border-bottom: 1px solid var(--link-theme);
 }
 
 .project_box .img_sec {
