--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -6,8 +6,9 @@
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 1000px;
+  height: auto;
   border-bottom: 1px solid var(--light-theme);
+  overflow: hidden;
 }
 
 /* Adding overlay with opacity */
@@ -18,16 +19,59 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity here (0.5 is 50%) */
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
 }
 
-.img_sec_about .img {
+.img_sec_about .img_content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 20px;
   color: var(--text-theme);
-  background-color: var(--light-theme);
   height: auto;
-  max-width: 600px;
   width: 100%;
   position: relative; /* Ensure stacking context for z-index */
   z-index: 1; /* Ensure the image is above the overlay */
+  height: auto;
+  margin-top: 200px;
+  margin-bottom: 100px;
+}
+
+.img_sec_about .img_content .heading {
+  text-align: left;
+  font-size: 100px;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: var(--heading-theme);
+}
+.img_sec_about .img_content .sub_heading {
+  margin-top: 20px;
+  text-align: left;
+  font-size: 60px;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: var(--heading-theme);
+}
+.img_sec_about .img_content p {
+  width: 100%;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Inter Tight", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: var(--heading-theme);
+}
+
+@media only screen and (max-width: 425px) {
+  .img_sec_about {
+    height: 250vh;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .img_sec_about {
+    height: 280vh;
+  }
 }
