add feedback and data inside this

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --dark-theme: #555555;
   --light-theme: #c0c0c0;
   --link-theme: #d3e97a;
+  --hover-theme: #cddd8d;
   --input-theme: #484848;
   --text-theme: #c7c7c7;
   --heading-theme: #fff;
