--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -19,14 +19,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
 }
 
 .img_sec_about .img_content {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
   border-radius: 20px;
   color: var(--text-theme);
   height: auto;
@@ -34,7 +34,7 @@
   position: relative; /* Ensure stacking context for z-index */
   z-index: 1; /* Ensure the image is above the overlay */
   height: auto;
-  margin-top: 200px;
+  margin-top: 400px;
   margin-bottom: 100px;
 }
 
