--- a/src/componets/reviews/review.css
+++ b/src/componets/reviews/review.css
@@ -6,7 +6,7 @@
 }
 .review_inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -30,7 +30,7 @@
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   margin-bottom: 20px;
   height: 350px;
-  width: 300px;
+  width: 350px;
   padding: 15px;
   border: 1px solid #eee;
   border-radius: 8px;
