--- a/src/componets/input/input.css
+++ b/src/componets/input/input.css
@@ -5,6 +5,7 @@
 
 .input_main label {
   color: var(--light-theme);
+  font-size: var(--fs-md);
 }
 .input_main input {
   margin-top: 5px;
@@ -14,6 +15,8 @@
   outline: none;
   overflow: hidden;
   border-radius: 10px;
+  font-size: var(--fs-md);
+  color: var(--heading-theme);
 }
 
 .input_main ::placeholder {
