--- a/src/componets/about_sec_2/about_sec_2.css
+++ b/src/componets/about_sec_2/about_sec_2.css
@@ -17,7 +17,7 @@
 }
 
 .About_Sec_2_main .about_detail .head {
-  font-size: var(--fs-sm);
+  font-size: var(--fs-md);
   font-weight: 600;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
@@ -25,7 +25,7 @@
 }
 
 .About_Sec_2_main .about_detail p {
-  font-size: var(--fs-xs);
+  font-size: var(--fs-sm);
   font-weight: 400;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
