--- a/src/componets/feedback/feedback.css
+++ b/src/componets/feedback/feedback.css
@@ -1,45 +1,36 @@
-/* .feedback_main {
-  padding: 50px 100px;
-  background-color: var(--dark-theme);
-  min-height: 300px;
-  height: auto;
-  border-bottom: 1px solid var(--main-theme);
-}
-.feedback_main .heading {
-  text-align: center;
-  font-size: 50px;
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  letter-spacing: 5px;
-  color: var(--heading-theme);
-}
-
-.feedback_main .input_sec {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media only screen and (max-width: 490px) {
-  .feedback_main {
-    padding: 50px 0px;
-  }
-} */
-
 .feedback_main {
+  position: relative; /* Ensure the overlay covers the entire background */
   padding: 70px 0px;
   background-color: var(--dark-theme);
-  min-height: 300px;
-  height: auto;
+  height: 800px;
+  /* height: auto; */
   border-bottom: 1px solid var(--main-theme);
+  background-image: url("../../../public/images/feedback.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.feedback_main::before {
+  content: ""; /* Create the pseudo-element */
+  position: absolute; /* Position it relative to the parent */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+}
+
+.feedback_inner {
+  display: flex;
 }
 
 .feedback-form-container {
-  max-width: 400px;
+  position: relative; /* Add this line */
+  z-index: 1;
+  width: auto;
   margin: 0 auto;
   padding: 20px;
-  background-color: var(--main-theme);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -75,7 +66,7 @@
 
 textarea {
   width: 100%;
-  height: 100px;
+  height: 300px;
   padding: 10px;
   outline: none;
   color: var(--text-theme);
@@ -85,7 +76,7 @@ textarea {
   font-weight: 600;
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
-  background-color: var(--input-theme);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .star {
