--- a/src/componets/form/form.css
+++ b/src/componets/form/form.css
@@ -2,19 +2,20 @@
   margin-top: 5px;
   padding: 20px;
   width: 100%;
+  color: var(--heading-theme);
   background-color: var(--input-theme);
-  color: var(--light-theme);
   outline: none;
   overflow: hidden;
   border-radius: 10px;
+  font-size: var(--fs-md);
 }
 
 .form_main .label_sec {
   color: var(--light-theme);
+  font-size: var(--fs-md);
   margin-top: 10px;
 }
 
-textarea ::placeholder {
-  background-color: var(--light-theme);
+.form_main ::placeholder {
   color: var(--light-theme);
 }
