--- a/src/componets/about_sec_2/about_sec_2.css
+++ b/src/componets/about_sec_2/about_sec_2.css
@@ -37,7 +37,7 @@
   align-items: center;
   gap: 20px;
 }
-.About_Sec_2_main .links .icons {
+.About_Sec_2_main .links .icons a {
   padding: 5px;
   width: 30px;
   height: 30px;
