--- a/src/componets/reviews/review.css
+++ b/src/componets/reviews/review.css
@@ -13,7 +13,7 @@
 .review_main .heading {
   width: 100%;
   display: flex;
-  text-wrap: nowrap;
+  text-wrap: wrap;
   font-size: 50px;
   margin-bottom: 10px;
   font-family: "Bebas Neue", sans-serif;
