--- a/src/componets/contect_sec/contact_sec.css
+++ b/src/componets/contect_sec/contact_sec.css
@@ -29,3 +29,11 @@
   color: var(--link-theme);
   font-size: var(--fs-lg);
 }
+.contact_sec_inner .info_links .icons a {
+  display: flex;
+  flex-direction: row;
+  padding-top: 5px;
+  gap: 20px;
+  color: var(--link-theme);
+  font-size: var(--fs-lg);
+}
