--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,9 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+.main_body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
