--- a/src/componets/about_sec_2/about_sec_2.css
+++ b/src/componets/about_sec_2/about_sec_2.css
@@ -5,7 +5,7 @@
   border-bottom: 1px solid var(--light-theme);
 }
 .About_Sec_2_inner {
-  padding: 50px;
+  padding: 80px 10px;
 }
 
 .About_Sec_2_main .heading {
@@ -36,7 +36,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 .About_Sec_2_main .links .icons a {
   padding: 5px;
